--- a/front/public/index.html
+++ b/front/public/index.html
@@ -8,6 +8,19 @@
   <!-- -- -->
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+
+  <!-- Chrome, Firefox, Opera -->
+  <meta content='#ecf4ff' name='theme-color' />
+
+  <!-- Windows Phone -->
+  <meta content='#ecf4ff' name='msapplication-navbutton-color' />
+
+  <!-- iOS Safari -->
+  <meta content='#ecf4ff' name='apple-mobile-web-app-status-bar-style' />
+  <meta content='yes' name='apple-mobile-web-app-capable' />
+
+
+
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
