update and bug fix profile page, userinfo page

--- a/front/public/index.html
+++ b/front/public/index.html
@@ -10,7 +10,7 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
 
   <!-- Chrome, Firefox, Opera -->
-  <meta content='#ecf4ff' name='theme-color' />
+  <meta content='#d5dbf0' name='theme-color' />
 
   <!-- Windows Phone -->
   <meta content='#ecf4ff' name='msapplication-navbutton-color' />
@@ -22,7 +22,6 @@
 
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <!--
