postZoom page bug fix, profile, userinfo page css update

--- a/front/public/index.html
+++ b/front/public/index.html
@@ -10,13 +10,11 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
 
   <!-- Chrome, Firefox, Opera -->
-  <meta content='#d5dbf0' name='theme-color' />
-
+  <meta content='#e3ecf9' name='theme-color' />
   <!-- Windows Phone -->
-  <meta content='#ecf4ff' name='msapplication-navbutton-color' />
-
+  <meta content='#e3ecf9' name='msapplication-navbutton-color' />
   <!-- iOS Safari -->
-  <meta content='#ecf4ff' name='apple-mobile-web-app-status-bar-style' />
+  <meta content='#e3ecf9' name='apple-mobile-web-app-status-bar-style' />
   <meta content='yes' name='apple-mobile-web-app-capable' />
 
 
