--- a/front/public/index.html
+++ b/front/public/index.html
@@ -36,7 +36,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>NARANG</title>
+  <title>모서리</title>
 </head>
 
 <body>
