--- a/front/public/index.html
+++ b/front/public/index.html
@@ -23,6 +23,10 @@
   <!-- <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" /> -->
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <meta property="og:title" content="굿락갓락" />
+  <meta property="og:description" content="굿락 팁 공유 플랫폼, 굿락갓락 :)" />
+  <meta property="og:image" content="https://ibb.co/7QvZxkD" />
+
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
