--- a/front/public/index.html
+++ b/front/public/index.html
@@ -25,7 +25,7 @@
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <meta property="og:title" content="굿락갓락" />
   <meta property="og:description" content="굿락 팁 공유 플랫폼, 굿락갓락 :)" />
-  <meta property="og:image" content="https://ibb.co/7QvZxkD" />
+  <meta property="og:image" content="https://i.ibb.co/gvr2x3n/Screenshot-2023-11-22-at-9-27-26-PM.png" />
 
   <!--
       manifest.json provides metadata used when your web app is installed on a
