start page text update

--- a/front/public/index.html
+++ b/front/public/index.html
@@ -24,8 +24,8 @@
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <meta property="og:title" content="굿락갓락" />
-  <meta property="og:description" content="굿락 팁 공유 플랫폼, 굿락갓락 :)" />
-  <meta property="og:image" content="https://i.ibb.co/gvr2x3n/Screenshot-2023-11-22-at-9-27-26-PM.png" />
+  <meta property="og:description" content="나만의 감성 더하기 +, 굿락갓락" />
+  <meta property="og:image" content="https://i.ibb.co/gT2PR03/Screenshot-2023-11-23-at-3-52-51-PM.png" />
 
   <!--
       manifest.json provides metadata used when your web app is installed on a
