--- a/front/public/index.html
+++ b/front/public/index.html
@@ -45,6 +45,7 @@
 </head>
 
 <body>
+  <!-- <a href="https://kr.freepik.com/free-vector/students-studying-textbooks_7732667.htm">작가 pch.vector</a> -->
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
   <!-- <a href="https://www.flaticon.com/kr/free-icons/" title="사용자 아이콘">사용자 아이콘  제작자: Becris - Flaticon</a> -->
