--- a/front/public/index.html
+++ b/front/public/index.html
@@ -41,7 +41,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>굿락갓락, 나만의 감성 더하기+</title>
+  <title>굿락갓락, 나만의 감성 더하기</title>
 </head>
 
 <body>
