--- a/front/public/index.html
+++ b/front/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <!-- mui -->
-  <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" /> -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
   <!-- -- -->
   <meta charset="utf-8" />
@@ -23,6 +23,7 @@
   <!-- <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" /> -->
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+
   <meta property="og:title" content="굿락갓락" />
   <meta property="og:description" content="나만의 감성 더하기, 굿락갓락" />
   <meta property="og:image" content="https://i.ibb.co/SnYFYkj/Screenshot-2023-12-04-at-4-27-53-AM.png" />
