--- a/front/public/index.html
+++ b/front/public/index.html
@@ -19,7 +19,7 @@
 
 
 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, interactive-widget=resizes-content" />
   <!-- <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" /> -->
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
